Update 2699. Modify Graph Edge Weights.md

--- a/Hard/2699/2699. Modify Graph Edge Weights.md
+++ b/Hard/2699/2699. Modify Graph Edge Weights.md
@@ -371,3 +371,105 @@ if __name__ == "__main__":
 
 #https://leetcode.com/problems/modify-graph-edge-weights/submissions/1368714331/
 ```
+
+---
+
+### Problem Recap
+
+You are working with a graph \( G = (V, E) \), where:
+
+- \( V \) is the set of vertices.
+- \( E \) is the set of edges.
+- Each edge \( e = (u, v) \) has a weight \( w(e) \), which can initially be \( 1 \), a positive integer, or \( -1 \) (unknown).
+
+Given a source vertex \( s \) and a destination vertex \( t \), your goal is to modify the weights of edges with \( w(e) = -1 \) such that the shortest path from \( s \) to \( t \) has a length of exactly \( T \).
+
+### Overview of the Approach
+
+1. **First Dijkstra Run:** Assume all unknown weights \( -1 \) are \( 1 \). Run Dijkstra's algorithm to find the shortest path from \( s \) to \( t \). Let this distance be \( d_1(t) \).
+
+2. **Check Feasibility:**
+   - If \( d_1(t) > T \), it is impossible to increase the path to exactly \( T \). No solution exists.
+   - If \( d_1(t) = T \), the current weights are already correct. No further modification is needed.
+   - If \( d_1(t) < T \), continue to the next step.
+
+3. **Second Dijkstra Run:** Adjust the weights dynamically to achieve the target distance \( T \). For every edge \( e = (u, v) \) with \( w(e) = -1 \), assign it the value that will make the shortest path exactly \( T \).
+
+### Mathematical Proof of Correctness
+
+We will use **mathematical induction** and some invariant properties to prove the correctness of this approach.
+
+#### Base Case
+
+After the first Dijkstra run:
+
+- **Invariant 1:** \( d_1(v) \leq d_2(v) \) for all vertices \( v \). 
+
+  **Explanation:** The first run assumes the minimal possible weights for unknown edges (all set to 1). Any increase in these weights during the second run will only increase the shortest path distance, thus \( d_2(v) \) cannot be less than \( d_1(v) \).
+
+- **Invariant 2:** The shortest path from \( s \) to \( t \) in the modified graph is at least \( T \).
+
+  **Explanation:** By the nature of Dijkstra's algorithm, the shortest path found will be the minimum distance possible. Any modifications we make will aim to increase the path length but not decrease it.
+
+These invariants hold at the start of the second Dijkstra run.
+
+#### Inductive Step
+
+Assume the above invariants hold after processing \( k \) vertices during the second Dijkstra run. We will show they also hold after processing the \( k+1 \)th vertex.
+
+Let \( u \) be the \( k+1 \)th vertex processed and consider an edge \( (v, u) \) where \( v \) has already been processed.
+
+**Case 1: Edge \( (v, u) \) has a known positive weight \( w \geq 1 \)**
+
+- The distance to \( u \) is updated as \( d_2(u) = \min(d_2(u), d_2(v) + w) \).
+- Since \( w \geq 1 \), the new distance \( d_2(u) \) will not be less than the initial distance \( d_1(u) \). Thus, **Invariant 1** holds.
+
+**Case 2: Edge \( (v, u) \) has an unknown weight \( w = -1 \)**
+
+- You set the new weight \( w' \) such that \( d_2(u) = \min(d_2(u), d_2(v) + w') \) and \( w' = \max(1, T + d_1(u) - d_2(v) - (d_1(t) - d_1(u))) \).
+
+Two sub-cases arise:
+
+- **Sub-case 2a:** \( w' = 1 \). Here, \( d_2(u) \) remains at least \( d_1(u) \), so **Invariant 1** holds.
+  
+- **Sub-case 2b:** \( w' > 1 \). Now, 
+  \[
+  d_2(u) = d_2(v) + w' = d_2(v) + \left( T + d_1(u) - d_2(v) - (d_1(t) - d_1(u)) \right)
+  \]
+  Simplifying, we get:
+  \[
+  d_2(u) = T - (d_1(t) - d_1(u))
+  \]
+  This ensures \( d_2(u) \) respects the upper bound \( T - (d_1(t) - d_1(u)) \), so **Invariant 1** holds.
+
+Additionally, since we are ensuring \( d_2(u) \geq d_1(u) \) and attempting to make the path length exactly \( T \), **Invariant 2** also holds.
+
+#### Conclusion of Induction
+
+By mathematical induction, the invariants hold throughout the entire second Dijkstra run.
+
+#### Termination
+
+When the algorithm terminates, all vertices have been processed:
+
+- \( d_2(t) \leq T - (d_1(t) - d_1(t)) = T \).
+
+But by **Invariant 2**, \( d_2(t) \geq T \). Therefore:
+
+\[
+d_2(t) = T
+\]
+
+This means the algorithm has successfully modified the graph to achieve the target distance \( T \).
+
+#### Optimality and Completeness
+
+- **Optimality:** The algorithm never increases an edge weight more than necessary. It processes vertices in the order of increasing distance, ensuring no shorter path is overlooked.
+  
+- **Completeness:** If the algorithm finds no solution:
+  - \( d_1(t) > T \) means the path is too long even with minimal edge weights, so increasing it to \( T \) is impossible.
+  - \( d_2(t) < T \) after the second run indicates that achieving exactly \( T \) is impossible without violating constraints.
+
+Thus, the algorithm correctly determines the shortest path of exactly \( T \) when possible and correctly identifies when no such solution exists.
+
+---
