Update 2699. Modify Graph Edge Weights.md

--- a/Hard/2699/2699. Modify Graph Edge Weights.md
+++ b/Hard/2699/2699. Modify Graph Edge Weights.md
@@ -1,38 +1,50 @@
-# Intuition
+### Intuition
+We're given an undirected weighted graph with n nodes, where some edges have positive weights and others have a weight of -1. Our task is to modify the -1 weight edges by assigning them positive integer values, with the goal of making the shortest path between two specific nodes (source and destination) equal to a given target distance.
 
-The problem at hand presents us with an intriguing challenge in graph theory and optimization. We're given an undirected weighted graph with n nodes, where some edges have positive weights and others have a weight of -1. Our task is to modify the -1 weight edges by assigning them positive integer values, with the goal of making the shortest path between two specific nodes (source and destination) equal to a given target distance.
+At first, this problem may appear like a variation of the shortest path problem, but we're not just finding the shortest path; we're actually manipulating the graph to achieve a specific shortest path length. This immediately says that we can use Dijkstra's algorithm However, the presence of -1 weights and the need to modify them adds a layer of complexity. We can't simply run Dijkstra's algorithm once and be done with it. We need to find a way to intelligently assign weights to the -1 edges to meet our target distance.
 
-At first glance, this problem seems like a variation of the shortest path problem, but with a twist. We're not just finding the shortest path; we're actually manipulating the graph to achieve a specific shortest path length. This immediately brings to mind Dijkstra's algorithm, a fundamental tool in solving shortest path problems.
+The constraints of the problem are also important to consider. We can only modify edges with -1 weights, and we must assign them positive integer values between 1 and 2 * 10^9. This gives us a wide range to work with, but also means we need to be careful not to overflow our integer values. 
 
-However, the presence of -1 weights and the need to modify them adds a layer of complexity. We can't simply run Dijkstra's algorithm once and be done with it. We need to find a way to intelligently assign weights to the -1 edges to meet our target distance.
+Try to understand this, Imagine you're a city planner tasked with redesigning a road network. You have a map of existing roads (edges) connecting various locations (nodes). Some roads have fixed lengths, while others are still in the planning phase (represented by -1 weights). Your goal is to determine the lengths of these planned roads so that the shortest route between two specific locations matches a target distance.
+ We can't alter the existing roads, but we have the freedom to set the lengths of the planned ones. This constraint adds a layer of complexity that sets it apart from standard shortest path problems.
+As mentioned before I was thinking of the basic Dijkstra's algorithm. It's the go-to solution for finding shortest paths in weighted graphs. I considered a naive approach: try all possible combinations of weights for the -1 edges. But this seemed impractical. With potentially many -1 edges and a large range of possible weights, the number of combinations would be astronomical, So instead of trying all possibilities, what if we could iteratively adjust the weights based on the current shortest path? I realized that we might need to run Dijkstra's algorithm multiple times. Why? Because each time we modify an edge weight, it could potentially change the shortest path in the graph. By running it first with only the fixed-weight edges, we could get a baseline shortest path. This information would then guide us in assigning weights to the -1 edges in a second pass. This led me to think about a two-phase approach:
 
-The constraints of the problem are also important to consider. We can only modify edges with -1 weights, and we must assign them positive integer values between 1 and 2 * 10^9. This gives us a wide range to work with, but also means we need to be careful not to overflow our integer values.
+>1. First, we run Dijkstra's algorithm with all -1 weights set to 1 (the minimum possible weight). This gives us the shortest possible path in the graph.
 
-As I pondered this problem, I realized that we might need to run Dijkstra's algorithm multiple times. Why? Because each time we modify an edge weight, it could potentially change the shortest path in the graph. This led me to think about a two-phase approach:
+>2. If this shortest path is already longer than our target distance, we know it's impossible to solve the problem, and we can return an empty array.
 
-1. First, we run Dijkstra's algorithm with all -1 weights set to 1 (the minimum possible weight). This gives us the shortest possible path in the graph.
+>3. If the shortest path is shorter than our target, we need to increase some of the -1 weights. But how do we know which ones to increase and by how much?
 
-2. If this shortest path is already longer than our target distance, we know it's impossible to solve the problem, and we can return an empty array.
+We can run Dijkstra's algorithm again, but this time, whenever we encounter a -1 edge, we can try to increase its weight just enough to make the path to that node equal to the target distance minus the remaining distance to the destination.
 
-3. If the shortest path is shorter than our target, we need to increase some of the -1 weights. But how do we know which ones to increase and by how much?
+But there's a catch: what if increasing one edge makes another path shorter? We need to be careful to always maintain the invariant that no path becomes shorter than our target distance. This led me to think about using two distance arrays: one for the minimum possible distances (with all -1 weights set to 1), and another for the distances as we're modifying the weights. By comparing these two arrays, we can ensure that we're always increasing the total path length, never decreasing it.
 
-This is where the second phase comes in. We can run Dijkstra's algorithm again, but this time, whenever we encounter a -1 edge, we can try to increase its weight just enough to make the path to that node equal to the target distance minus the remaining distance to the destination.
+The use of a priority queue in Dijkstra's algorithm also seemed helpful, as It would allow me to always process the node with the shortest current distance, making our weight assignments more efficient. I was thinking if one would need to keep track of not just the nodes, but also the edges. We can use an adjacency list representation of the graph, where each entry in the list contains both the neighboring node and the index of the edge in the original edge list.
 
-But there's a catch: what if increasing one edge makes another path shorter? We need to be careful to always maintain the invariant that no path becomes shorter than our target distance.
+Then finally try to figure out how to handle cases where multiple modifications could lead to the target distance. The problem statement allows for any valid solution, which gives us some flexibility. We can simply stop once we've found a valid configuration, rather than trying to enumerate all possible solutions.
 
-This led me to think about using two distance arrays: one for the minimum possible distances (with all -1 weights set to 1), and another for the distances as we're modifying the weights. By comparing these two arrays, we can ensure that we're always increasing the total path length, never decreasing it.
+Handling Edge Cases:
 
-The use of a priority queue in Dijkstra's algorithm also seemed crucial. It would allow us to always process the node with the shortest current distance, making our weight assignments more efficient.
+1. What if the initial shortest path is already too long? We address this by immediately returning an empty array, signaling that no solution is possible.
 
-As I thought about the implementation, I realized we would need to keep track of not just the nodes, but also the edges. This suggested using an adjacency list representation of the graph, where each entry in the list contains both the neighboring node and the index of the edge in the original edge list.
+2. How do we ensure we don't assign weights greater than the allowed maximum (2 * 10^9)? By starting with minimum weights (1) and only increasing them as necessary, we minimize this risk. In practice, it's highly unlikely we'd ever approach the maximum allowed weight.
 
-The final piece of the puzzle was figuring out how to handle cases where multiple modifications could lead to the target distance. The problem statement allows for any valid solution, which gives us some flexibility. We can simply stop once we've found a valid configuration, rather than trying to enumerate all possible solutions.
+3. What if multiple solutions exist? Our approach will find one valid solution, which is sufficient according to the problem statement. However, it's worth noting that there could be many ways to assign weights that satisfy the target distance.
 
-This intuition led me to develop an approach that involves running a modified version of Dijkstra's algorithm twice, carefully adjusting edge weights along the way. Let's dive into the details of this approach.
+4. How do we handle disconnected graphs? The problem statement guarantees a connected graph, but in a real-world scenario, we'd need to add checks for this.
 
+Mathematical Insights:
+
+The core mathematical insight here is the relationship between edge weights and path lengths. By understanding that the total path length is simply the sum of its edge weights, we can treat our problem as a type of equation:
+
+(Sum of fixed-weight edges) + (Sum of adjustable-weight edges) = Target Distance
+
+This formulation allows us to see that we're essentially solving for the "Sum of adjustable-weight edges" term. Our two-pass approach is a better way of determining the values that satisfy this equation while respecting the constraints of the graph structure.
+
+---
 # Approach
 
-To solve this problem, we'll implement a two-phase approach using a modified version of Dijkstra's algorithm. Here's a detailed breakdown of the steps:
+To solve this problem, we'll implement a two-phase approach using a modified version of Dijkstra's algorithm:
 
 1. Graph Representation:
    - Create an adjacency list representation of the graph.
@@ -142,18 +154,18 @@ function modifiedGraphEdges(n, edges, source, destination, target):
     return updateEdges(edges)
 ```
 
-This approach carefully balances the need to find the shortest path with the requirement to modify edge weights to meet the target distance. By running Dijkstra's algorithm twice and making intelligent adjustments to edge weights, we can efficiently solve this complex graph problem.
+
 
 # Complexity
-* Time complexity: The time complexity of this solution is O((E + V) log V), where E is the number of edges and V is the number of vertices (nodes) in the graph. This is because we run Dijkstra's algorithm twice, and each run of Dijkstra's algorithm using a priority queue has a time complexity of O((E + V) log V). The additional operations (creating the adjacency list, initializing distances, and updating edges) are all linear in terms of E or V, so they don't affect the overall time complexity.
+* **Time complexity:** The time complexity of this solution is $O((E + V) log V)$, where E is the number of edges and V is the number of vertices $(nodes)$ in the graph. This is because we run Dijkstra's algorithm twice, and each run of Dijkstra's algorithm using a priority queue has a time complexity of $O((E + V) log V)$. The additional operations (creating the adjacency list, initializing distances, and updating edges) are all linear in terms of E or V, so they don't affect the overall time complexity.
 
-* Space complexity: The space complexity is O(E + V). This comes from:
+* **Space complexity**: The space complexity is $O(E + V)$. This comes from:
   - The adjacency list, which stores all edges and thus takes O(E) space.
   - The distances array, which stores two distances for each vertex, taking O(V) space.
   - The priority queue used in Dijkstra's algorithm, which in the worst case could contain all vertices, taking O(V) space.
   - The original edges array, which takes O(E) space.
 
-Therefore, the total space complexity is O(E + V).
+Therefore, the total space complexity is $O(E + V)$.
 
 
 ### CODE
@@ -372,104 +384,438 @@ if __name__ == "__main__":
 #https://leetcode.com/problems/modify-graph-edge-weights/submissions/1368714331/
 ```
 
----
+```Go []
+func modifiedGraphEdges(n int, edges [][]int, source int, destination int, target int) [][]int {
+	adjacencyList := make([][]pair, n)
+	for i := 0; i < len(edges); i++ {
+		nodeA, nodeB := edges[i][0], edges[i][1]
+		adjacencyList[nodeA] = append(adjacencyList[nodeA], pair{nodeB, i})
+		adjacencyList[nodeB] = append(adjacencyList[nodeB], pair{nodeA, i})
+	}
 
+	distances := make([][2]int, n)
+	for i := 0; i < n; i++ {
+		if i != source {
+			distances[i] = [2]int{math.MaxInt32, math.MaxInt32}
+		}
+	}
+
+	runDijkstra(adjacencyList, edges, distances, source, 0, 0)
+	difference := target - distances[destination][0]
+	if difference < 0 {
+		return [][]int{}
+	}
+
+	runDijkstra(adjacencyList, edges, distances, source, difference, 1)
+	if distances[destination][1] < target {
+		return [][]int{}
+	}
+
+	for i := range edges {
+		if edges[i][2] == -1 {
+			edges[i][2] = 1
+		}
+	}
+
+	return edges
+}
+
+type pair struct {
+	node, edgeIndex int
+}
+
+func runDijkstra(adjacencyList [][]pair, edges [][]int, distances [][2]int, source, difference, run int) {
+	pq := &PriorityQueue{}
+	heap.Init(pq)
+	heap.Push(pq, &Item{value: source, priority: 0})
+	distances[source][run] = 0
+
+	for pq.Len() > 0 {
+		current := heap.Pop(pq).(*Item)
+		currentNode, currentDistance := current.value, current.priority
+
+		if currentDistance > distances[currentNode][run] {
+			continue
+		}
+
+		for _, neighbor := range adjacencyList[currentNode] {
+			nextNode, edgeIndex := neighbor.node, neighbor.edgeIndex
+			weight := edges[edgeIndex][2]
+			if weight == -1 {
+				weight = 1
+			}
+
+			if run == 1 && edges[edgeIndex][2] == -1 {
+				newWeight := difference + distances[nextNode][0] - distances[currentNode][1]
+				if newWeight > weight {
+					edges[edgeIndex][2] = newWeight
+					weight = newWeight
+				}
+			}
+
+			if distances[nextNode][run] > distances[currentNode][run]+weight {
+				distances[nextNode][run] = distances[currentNode][run] + weight
+				heap.Push(pq, &Item{value: nextNode, priority: distances[nextNode][run]})
+			}
+		}
+	}
+}
+
+
+type Item struct {
+	value    int
+	priority int
+	index    int
+}
+
+type PriorityQueue []*Item
+
+func (pq PriorityQueue) Len() int           { return len(pq) }
+func (pq PriorityQueue) Less(i, j int) bool { return pq[i].priority < pq[j].priority }
+func (pq PriorityQueue) Swap(i, j int) {
+	pq[i], pq[j] = pq[j], pq[i]
+	pq[i].index = i
+	pq[j].index = j
+}
+func (pq *PriorityQueue) Push(x interface{}) {
+	n := len(*pq)
+	item := x.(*Item)
+	item.index = n
+	*pq = append(*pq, item)
+}
+func (pq *PriorityQueue) Pop() interface{} {
+	old := *pq
+	n := len(old)
+	item := old[n-1]
+	old[n-1] = nil
+	item.index = -1
+	*pq = old[0 : n-1]
+	return item
+}
+
+//https://leetcode.com/problems/modify-graph-edge-weights/submissions/1369757077/
+```
+```Rust []
+use std::collections::BinaryHeap;
+use std::cmp::Reverse;
+
+impl Solution {
+    pub fn modified_graph_edges(n: i32, mut edges: Vec<Vec<i32>>, source: i32, destination: i32, target: i32) -> Vec<Vec<i32>> {
+        let n = n as usize;
+        let mut adjacency_list = vec![Vec::new(); n];
+        for (i, edge) in edges.iter().enumerate() {
+            let (node_a, node_b) = (edge[0] as usize, edge[1] as usize);
+            adjacency_list[node_a].push((node_b, i));
+            adjacency_list[node_b].push((node_a, i));
+        }
+
+        let mut distances = vec![[i32::MAX; 2]; n];
+        distances[source as usize] = [0; 2];
+
+        Self::run_dijkstra(&adjacency_list, &mut edges, &mut distances, source as usize, 0, 0);
+        let difference = target - distances[destination as usize][0];
+        if difference < 0 {
+            return Vec::new();
+        }
+
+        Self::run_dijkstra(&adjacency_list, &mut edges, &mut distances, source as usize, difference, 1);
+        if distances[destination as usize][1] < target {
+            return Vec::new();
+        }
+
+        for edge in &mut edges {
+            if edge[2] == -1 {
+                edge[2] = 1;
+            }
+        }
+
+        edges
+    }
+
+    fn run_dijkstra(adjacency_list: &Vec<Vec<(usize, usize)>>, edges: &mut Vec<Vec<i32>>, distances: &mut Vec<[i32; 2]>, source: usize, difference: i32, run: usize) {
+        let mut pq = BinaryHeap::new();
+        pq.push(Reverse((0, source)));
+        distances[source][run] = 0;
+
+        while let Some(Reverse((current_distance, current_node))) = pq.pop() {
+            if current_distance > distances[current_node][run] {
+                continue;
+            }
+
+            for &(next_node, edge_index) in &adjacency_list[current_node] {
+                let mut weight = edges[edge_index][2];
+                if weight == -1 {
+                    weight = 1;
+                }
+
+                if run == 1 && edges[edge_index][2] == -1 {
+                    let new_weight = difference + distances[next_node][0] - distances[current_node][1];
+                    if new_weight > weight {
+                        edges[edge_index][2] = new_weight;
+                        weight = new_weight;
+                    }
+                }
+
+                let new_distance = distances[current_node][run].saturating_add(weight);
+                if new_distance < distances[next_node][run] {
+                    distances[next_node][run] = new_distance;
+                    pq.push(Reverse((new_distance, next_node)));
+                }
+            }
+        }
+    }
+}
+
+//https://leetcode.com/problems/modify-graph-edge-weights/submissions/1369757368/
+
+```
+```JavaScript []
+/**
+ * @param {number} n
+ * @param {number[][]} edges
+ * @param {number} source
+ * @param {number} destination
+ * @param {number} target
+ * @return {number[][]}
+ */
+var modifiedGraphEdges = function(n, edges, source, destination, target) {
+    class PriorityQueue {
+        constructor() {
+            this.elements = [];
+        }
+
+        enqueue(element, priority) {
+            this.elements.push({element, priority});
+            this.elements.sort((a, b) => a.priority - b.priority);
+        }
+
+        dequeue() {
+            return this.elements.shift();
+        }
+
+        isEmpty() {
+            return this.elements.length === 0;
+        }
+    }
+
+    const adjacencyList = Array.from({ length: n }, () => []);
+    for (let i = 0; i < edges.length; i++) {
+        const [nodeA, nodeB] = edges[i];
+        adjacencyList[nodeA].push([nodeB, i]);
+        adjacencyList[nodeB].push([nodeA, i]);
+    }
+
+    const distances = Array.from({ length: n }, () => [Infinity, Infinity]);
+    distances[source] = [0, 0];
+
+    runDijkstra(adjacencyList, edges, distances, source, 0, 0);
+    const difference = target - distances[destination][0];
+    if (difference < 0) return [];
+
+    runDijkstra(adjacencyList, edges, distances, source, difference, 1);
+    if (distances[destination][1] < target) return [];
+
+    for (const edge of edges) {
+        if (edge[2] === -1) edge[2] = 1;
+    }
+
+    return edges;
+
+    function runDijkstra(adjacencyList, edges, distances, source, difference, run) {
+        const pq = new PriorityQueue();
+        pq.enqueue(source, 0);
+        distances[source][run] = 0;
+
+        while (!pq.isEmpty()) {
+            const {element: currentNode, priority: currentDistance} = pq.dequeue();
+
+            if (currentDistance > distances[currentNode][run]) continue;
+
+            for (const [nextNode, edgeIndex] of adjacencyList[currentNode]) {
+                let weight = edges[edgeIndex][2];
+                if (weight === -1) weight = 1;
+
+                if (run === 1 && edges[edgeIndex][2] === -1) {
+                    const newWeight = difference + distances[nextNode][0] - distances[currentNode][1];
+                    if (newWeight > weight) {
+                        edges[edgeIndex][2] = weight = newWeight;
+                    }
+                }
+
+                if (distances[nextNode][run] > distances[currentNode][run] + weight) {
+                    distances[nextNode][run] = distances[currentNode][run] + weight;
+                    pq.enqueue(nextNode, distances[nextNode][run]);
+                }
+            }
+        }
+    }
+};
+
+```
+
+---
+### Mathematical Explanation
 ### Problem Recap
 
-You are working with a graph \( G = (V, E) \), where:
+  
 
-- \( V \) is the set of vertices.
-- \( E \) is the set of edges.
-- Each edge \( e = (u, v) \) has a weight \( w(e) \), which can initially be \( 1 \), a positive integer, or \( -1 \) (unknown).
+You are working with a graph $G = (V, E)$, where:
 
-Given a source vertex \( s \) and a destination vertex \( t \), your goal is to modify the weights of edges with \( w(e) = -1 \) such that the shortest path from \( s \) to \( t \) has a length of exactly \( T \).
+  
+
+- $V$ is the set of vertices.
+
+- $E$ is the set of edges.
+
+- Each edge $e = (u, v)$ has a weight $w(e)$, which can initially be $1$, a positive integer, or $-1$ (unknown).
+
+  
+
+Given a source vertex $s$ and a destination vertex $t$, your goal is to modify the weights of edges with $w(e) = -1$ such that the shortest path from $s$ to $t$ has a length of exactly $T$.
+
+  
 
 ### Overview of the Approach
 
-1. **First Dijkstra Run:** Assume all unknown weights \( -1 \) are \( 1 \). Run Dijkstra's algorithm to find the shortest path from \( s \) to \( t \). Let this distance be \( d_1(t) \).
+  
+
+1. **First Dijkstra Run:** Assume all unknown weights $-1$ are $1$. Run Dijkstra's algorithm to find the shortest path from $s$ to $t$. Let this distance be $d_1(t)$.
+
+  
 
 2. **Check Feasibility:**
-   - If \( d_1(t) > T \), it is impossible to increase the path to exactly \( T \). No solution exists.
-   - If \( d_1(t) = T \), the current weights are already correct. No further modification is needed.
-   - If \( d_1(t) < T \), continue to the next step.
 
-3. **Second Dijkstra Run:** Adjust the weights dynamically to achieve the target distance \( T \). For every edge \( e = (u, v) \) with \( w(e) = -1 \), assign it the value that will make the shortest path exactly \( T \).
+- If $d_1(t) > T$, it is impossible to increase the path to exactly $T$. No solution exists.
 
-### Mathematical Proof of Correctness
+- If $d_1(t) = T$, the current weights are already correct. No further modification is needed.
+
+- If $d_1(t) < T$, continue to the next step.
+
+  
+
+3. **Second Dijkstra Run:** Adjust the weights dynamically to achieve the target distance $T$. For every edge $e = (u, v)$ with $w(e) = -1$, assign it the value that will make the shortest path exactly $T$.
+
+  
 
 We will use **mathematical induction** and some invariant properties to prove the correctness of this approach.
 
+  
+
 #### Base Case
+
+  
 
 After the first Dijkstra run:
 
-- **Invariant 1:** \( d_1(v) \leq d_2(v) \) for all vertices \( v \). 
+  
 
-  **Explanation:** The first run assumes the minimal possible weights for unknown edges (all set to 1). Any increase in these weights during the second run will only increase the shortest path distance, thus \( d_2(v) \) cannot be less than \( d_1(v) \).
+- **Invariant 1:** $d_1(v) \leq d_2(v)$ for  all vertices $v$.
 
-- **Invariant 2:** The shortest path from \( s \) to \( t \) in the modified graph is at least \( T \).
+  
 
-  **Explanation:** By the nature of Dijkstra's algorithm, the shortest path found will be the minimum distance possible. Any modifications we make will aim to increase the path length but not decrease it.
+**Explanation:** The first run assumes the minimal possible weights for unknown edges (all  set to 1). Any increase in these weights during the second run will only increase the shortest path distance, thus $d_2(v)$ cannot be less than $d_1(v)$.
+
+  
+
+- **Invariant 2:** The shortest path from $s$ to $t$ in the modified graph is at least $T$.
+
+  
+
+**Explanation:** By the nature of Dijkstra's algorithm, the shortest path found will be the minimum distance possible. Any modifications we make will aim to increase the path length but not decrease it.
+
+  
 
 These invariants hold at the start of the second Dijkstra run.
 
+  
+
 #### Inductive Step
 
-Assume the above invariants hold after processing \( k \) vertices during the second Dijkstra run. We will show they also hold after processing the \( k+1 \)th vertex.
+  
 
-Let \( u \) be the \( k+1 \)th vertex processed and consider an edge \( (v, u) \) where \( v \) has already been processed.
+Assume the above invariants hold after processing $k$ vertices during the second Dijkstra run. We will show they also hold after processing the $k+1$th vertex.
 
-**Case 1: Edge \( (v, u) \) has a known positive weight \( w \geq 1 \)**
+  
 
-- The distance to \( u \) is updated as \( d_2(u) = \min(d_2(u), d_2(v) + w) \).
-- Since \( w \geq 1 \), the new distance \( d_2(u) \) will not be less than the initial distance \( d_1(u) \). Thus, **Invariant 1** holds.
+Let $u$ be the $k+1$th vertex processed and consider an edge $(v, u)$ where $v$ has already been processed.
 
-**Case 2: Edge \( (v, u) \) has an unknown weight \( w = -1 \)**
+  
 
-- You set the new weight \( w' \) such that \( d_2(u) = \min(d_2(u), d_2(v) + w') \) and \( w' = \max(1, T + d_1(u) - d_2(v) - (d_1(t) - d_1(u))) \).
+**Case 1: Edge $(v, u)$ has a known positive weight $w \geq 1$**
+
+  
+
+- The distance to $u$ is updated as $d_2(u) = \min(d_2(u), d_2(v) + w)$.
+
+- Since $w \geq 1$, the new distance $d_2(u)$ will not be less than the initial distance $d_1(u)$. Thus, **Invariant 1** holds.
+
+  
+
+**Case 2: Edge $(v, u)$ has an unknown weight $w = -1$**
+
+  
+
+- You set the new weight $w'$such that $d_2(u) = \min(d_2(u), d_2(v) + w')$and $w' = \max(1, T + d_1(u) - d_2(v) - (d_1(t) - d_1(u)))$.
+
+  
 
 Two sub-cases arise:
 
-- **Sub-case 2a:** \( w' = 1 \). Here, \( d_2(u) \) remains at least \( d_1(u) \), so **Invariant 1** holds.
   
-- **Sub-case 2b:** \( w' > 1 \). Now, 
-  \[
-  d_2(u) = d_2(v) + w' = d_2(v) + \left( T + d_1(u) - d_2(v) - (d_1(t) - d_1(u)) \right)
-  \]
-  Simplifying, we get:
-  \[
-  d_2(u) = T - (d_1(t) - d_1(u))
-  \]
-  This ensures \( d_2(u) \) respects the upper bound \( T - (d_1(t) - d_1(u)) \), so **Invariant 1** holds.
 
-Additionally, since we are ensuring \( d_2(u) \geq d_1(u) \) and attempting to make the path length exactly \( T \), **Invariant 2** also holds.
+- **Sub-case 2a:** $w' = 1$. Here, $d_2(u)$ remains at least $d_1(u)$, so **Invariant 1** holds.
+
+- **Sub-case 2b:** $w' > 1$. Now,
+
+$d_2(u) = d_2(v) + w' = d_2(v) + \left( T + d_1(u) - d_2(v) - (d_1(t) - d_1(u)) \right)$
+
+Simplifying, we get:
+
+$d_2(u) = T - (d_1(t) - d_1(u))$
+
+This ensures $d_2(u)$ respects the upper bound $T - (d_1(t) - d_1(u))$, so **Invariant 1** holds.
+
+  
+
+Additionally, since we are ensuring $d_2(u) \geq d_1(u)$and attempting to make the path length exactly $T$, **Invariant 2** also holds.
+
+  
 
 #### Conclusion of Induction
 
+  
+
 By mathematical induction, the invariants hold throughout the entire second Dijkstra run.
+
+  
 
 #### Termination
 
+  
+
 When the algorithm terminates, all vertices have been processed:
 
-- \( d_2(t) \leq T - (d_1(t) - d_1(t)) = T \).
+  
+- $d_2(t) = T$, meaning the algorithm has successfully modified the graph to achieve the target distance $T$
+- If no solution is found (i.e., $d_1(t) > T$ or $d_2(t) < T$after the second run), the algorithm correctly identifies the impossibility of achieving exactly $T$.
+  
 
-But by **Invariant 2**, \( d_2(t) \geq T \). Therefore:
+This means the algorithm has successfully modified the graph to achieve the target distance $T$.
 
-\[
-d_2(t) = T
-\]
+  
 
-This means the algorithm has successfully modified the graph to achieve the target distance \( T \).
+### Optimality and Completeness
 
-#### Optimality and Completeness
+  
 
 - **Optimality:** The algorithm never increases an edge weight more than necessary. It processes vertices in the order of increasing distance, ensuring no shorter path is overlooked.
-  
+
 - **Completeness:** If the algorithm finds no solution:
-  - \( d_1(t) > T \) means the path is too long even with minimal edge weights, so increasing it to \( T \) is impossible.
-  - \( d_2(t) < T \) after the second run indicates that achieving exactly \( T \) is impossible without violating constraints.
 
-Thus, the algorithm correctly determines the shortest path of exactly \( T \) when possible and correctly identifies when no such solution exists.
+- $d_1(t) > T$ means the path is too long even with minimal edge weights, so increasing it to $T$ is impossible.
 
----
+- $d_2(t) < T$ after the second run indicates that achieving exactly $T$ is impossible without violating constraints.
+
+  
+
+Thus, the algorithm correctly determines the shortest path of exactly $T$ when possible and correctly identifies when no such solution exists.
