--- a/Hard/2699/2699. Modify Graph Edge Weights.md
+++ b/Hard/2699/2699. Modify Graph Edge Weights.md
@@ -19,9 +19,9 @@ We can run Dijkstra's algorithm again, but this time, whenever we encounter a -1
 
 But there's a catch: what if increasing one edge makes another path shorter? We need to be careful to always maintain the invariant that no path becomes shorter than our target distance. This led me to think about using two distance arrays: one for the minimum possible distances (with all -1 weights set to 1), and another for the distances as we're modifying the weights. By comparing these two arrays, we can ensure that we're always increasing the total path length, never decreasing it.
 
-The use of a priority queue in Dijkstra's algorithm also seemed helpful, as It would allow me to always process the node with the shortest current distance, making our weight assignments more efficient. I was thinking if one would need to keep track of not just the nodes, but also the edges. We can use an adjacency list representation of the graph, where each entry in the list contains both the neighboring node and the index of the edge in the original edge list.
+The use of a priority queue in Dijkstra's algorithm also seemed helpful although we require additional memory for the priority queue but still It would allow me to always process the node with the shortest current distance, making our weight assignments more efficient. I was thinking if one would need to keep track of not just the nodes, but also the edges. We can use an adjacency list representation of the graph, where each entry in the list contains both the neighboring node and the index of the edge in the original edge list.
 
-Then finally try to figure out how to handle cases where multiple modifications could lead to the target distance. The problem statement allows for any valid solution, which gives us some flexibility. We can simply stop once we've found a valid configuration, rather than trying to enumerate all possible solutions.
+Then finally thnik about trying to figure out how to handle cases where multiple modifications could lead to the target distance. The problem statement allows for any valid solution, which gives us some flexibility. We can simply stop once we've found a valid configuration, rather than trying to enumerate all possible solutions.
 
 Handling Edge Cases:
 
@@ -87,8 +87,7 @@ function initializeDistances(n, source):
    - This time, when we encounter a -1 edge, we try to increase its weight to make the path to that node equal to the target minus the remaining distance to the destination.
    - Store these new distances in the second column of our distances array.
 
-Here's the pseudocode for our modified Dijkstra's algorithm:
-
+pseudocode 
 ```
 function modifiedDijkstra(adjacencyList, edges, distances, source, difference, run):
     priorityQueue = new PriorityQueue()
@@ -154,7 +153,63 @@ function modifiedGraphEdges(n, edges, source, destination, target):
     return updateEdges(edges)
 ```
 
+### Example 
+![example 1.png](https://assets.leetcode.com/users/images/101d5c08-6748-4d17-aa01-16b594877b99_1724833011.0585895.png)
 
+Lets take the example 1 from problem
+
+## Initial Setup
+- The problem involves a graph with 5 nodes (0 to 4) and edges represented as `[[4,1,-1],[2,0,-1],[0,3,-1],[4,3,-1]]`.
+- The source node is 0, the destination node is 1, and the target distance is 5.
+- Edges with weight -1 can be modified to positive integer values.
+
+## Step 1: Build the Graph
+- An empty graph is initially created.
+- No edges are added at this stage because all weights are -1.
+- The graph remains empty, represented by adjacency lists for each node.
+
+## Step 2: Compute Initial Shortest Distance
+- Dijkstra's algorithm is run on the empty graph.
+- Since there are no edges, no paths are found.
+- The shortest distance is set to INF (infinity).
+- This initial distance (INF) is not less than the target (5), so the algorithm continues.
+
+## Step 3: Adjust Edge Weights
+The algorithm processes each edge and adjusts its weight:
+
+1. Edge [4,1,-1]:
+   - Weight is set to 1.
+   - Graph updated: node 4 now connects to node 1 with weight 1.
+
+2. Edge [2,0,-1]:
+   - Weight is set to 1.
+   - Graph updated: node 2 now connects to node 0 with weight 1.
+
+3. Edge [0,3,-1]:
+   - Weight is set to 1.
+   - Graph updated: node 0 now connects to node 3 with weight 1.
+
+4. Edge [4,3,-1]:
+   - Weight is set to 1.
+   - Graph updated: node 4 now connects to node 3 with weight 1.
+
+After these adjustments, the graph has all edges with weight 1.
+
+## Final Adjustment
+- The current shortest path from source (0) to destination (1) has a distance of 3.
+- This is less than the target distance of 5, so further adjustment is needed.
+- The algorithm identifies that the weight of edge [0,3] needs to be increased.
+- It sets the weight of edge [0,3] to 3 (instead of 1).
+- This results in a path 0 -> 3 -> 4 -> 1 with a total distance of 5, meeting the target.
+
+## Final Graph
+The final graph has the following structure:
+- Edge [4,1] with weight 1
+- Edge [2,0] with weight 1
+- Edge [0,3] with weight 3 (adjusted)
+- Edge [4,3] with weight 1
+
+This configuration achieves the target shortest path distance of 5 from node 0 to node 1.
 
 # Complexity
 * **Time complexity:** The time complexity of this solution is $O((E + V) log V)$, where E is the number of edges and V is the number of vertices $(nodes)$ in the graph. This is because we run Dijkstra's algorithm twice, and each run of Dijkstra's algorithm using a priority queue has a time complexity of $O((E + V) log V)$. The additional operations (creating the adjacency list, initializing distances, and updating edges) are all linear in terms of E or V, so they don't affect the overall time complexity.
